syntax = "proto3";

package gameplay_service;

message MoveInventoryRequest {
    string userId = 1;
    string inventoryId = 2;
    int32 index = 3;
    string kind = 4;
}